<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/exercise_back"
        android:layout_width="154dp"
        android:layout_height="201dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_category_back"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/exercise_shoulders"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/pullups" />

    <ImageButton
        android:id="@+id/exercise_shoulders"
        android:layout_width="154dp"
        android:layout_height="201dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_category_shoulders"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/overheadpress" />

    <ImageButton
        android:id="@+id/exercise_legs"
        android:layout_width="154dp"
        android:layout_height="201dp"
        android:layout_marginStart="36dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_list_item_squat"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_shoulders"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/exercisesquat" />

    <ImageButton
        android:id="@+id/exercise_bicep"
        android:layout_width="154dp"
        android:layout_height="201dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_category_biceps"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/exercise_legs"
        app:layout_constraintTop_toBottomOf="@+id/exercise_back"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/bicepcurls" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/exercises_list_name"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>