<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:id="@+id/framelayout" >
    </FrameLayout>
    
    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/primary_dark"
        app:fabCustomSize="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        app:elevation="20dp"/>
        <!--
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />
        app:layout_constraintTop_toBottomOf="@+id/videoView" -->

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="@android:drawable/screen_background_light_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exercise_button"
        android:layout_width="170dp"
        android:layout_height="203dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_list_item_text"
        android:scaleType="centerCrop"
        android:src="@drawable/overheadpress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <ImageButton
        android:id="@+id/exercise_button2"
        android:layout_width="170dp"
        android:layout_height="203dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/exercise_list_item_text"
        android:scaleType="centerCrop"
        android:src="@drawable/exercisesquat"
        app:layout_constraintStart_toEndOf="@+id/exercise_button"
        app:layout_constraintTop_toTopOf="@+id/exercise_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/popular_exercises_text"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/exercise_button"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/see_all_text"
        android:textColor="@color/primary_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/exercise_deadlift"
        android:textColor="@color/primary_light"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_main2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/exercise_category_back"
        android:textColor="@color/primary_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
